[package]
name = "mdkit"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
authors = ["mdkit contributors"]
description = "Get markdown out of any document — Pandoc + pdfium + platform-native OCR, dispatched per format."
documentation = "https://docs.rs/mdkit"
homepage = "https://github.com/mdkit-project/mdkit"
repository = "https://github.com/mdkit-project/mdkit"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["markdown", "pdf", "docx", "pandoc", "ocr"]
categories = ["text-processing", "parser-implementations", "filesystem"]
exclude = [
    "/.github",
    "/tests/fixtures/large/*",
]

[features]
# The default set is the in-process Rust backends — no sidecar binaries
# to bundle, no platform-specific FFI. Adds ~7 MB to a release build.
default = ["pdf", "calamine", "csv", "html"]

# In-process Rust backends.
pdf      = ["dep:pdfium-render"]   # PDF text via Google Pdfium (libpdfium required at runtime)
calamine = ["dep:calamine"]         # XLSX / XLS / XLSB / ODS spreadsheets
csv      = ["dep:csv"]              # CSV / TSV
html     = ["dep:html2md"]          # HTML / HTM (lighter alternative to Pandoc for HTML)

# Sidecar backend — shells out to the `pandoc` binary on PATH (or a
# caller-provided absolute path via PandocExtractor::with_binary).
# No Rust dependency needed; the binary itself is the dependency.
pandoc   = []

# OCR backends — pick one. Both can coexist; ocr-platform is preferred
# at runtime when available (macOS / Windows), falling back to ocr-onnx.
ocr-platform = []   # placeholder; macOS Vision + Windows.Media.Ocr in v0.5
ocr-onnx     = []   # placeholder; Surya/ONNX in v0.6

# Build-everything convenience for downstream tests.
full = ["pdf", "pandoc", "ocr-platform", "ocr-onnx", "calamine", "csv", "html"]

[dependencies]
thiserror = "2"

# Optional backends. Each is gated by the corresponding feature flag
# above. Dependencies use `default-features = false` and only enable
# the minimum surface mdkit consumes — keeps the dependency graph
# small for downstream consumers.
pdfium-render = { version = "0.9", optional = true, default-features = false, features = ["thread_safe", "pdfium_latest"] }
calamine      = { version = "0.34", optional = true }
csv           = { version = "1", optional = true }
html2md       = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Selectively allow the pedantic lints that fight common idioms.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
